2007-07-01  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* EditorWindow.cs: Minor changes.
	* gtk-gui/Monodoc.Editor.EditorWindow.cs, gtk-gui/gui.stetic: Changed
	  named from statusbar1 to status_bar and added a ProgressBar named
	  progress_bar

2007-06-28  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* gtk-gui/Monodoc.Editor.SaveDocDialog.cs,
	  gtk-gui/Monodoc.Editor.OpenDocDialog.cs, gtk-gui/gui.stetic: Minor
	  changes to Save and Open dialogs

2007-06-28  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* gtk-gui/Monodoc.Editor.EditorWindow.cs, gtk-gui/gui.stetic: Minor
	  change moved Quit menu.

2007-06-28  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* EditorWindow.cs, gtk-gui/Monodoc.Editor.EditorWindow.cs,
	  gtk-gui/gui.stetic: Added a notebook to get "tab" functionality in
	  the editor, each page in the notebook will be a DocumentTab ie an
	  editor for each document.

2007-06-24  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* EditorWindow.cs: Changed the handling of the OnSaveAs and OnOpen
	  events for the EditorWindow.
	* gtk-gui/Monodoc.Editor.SaveDocDialog.cs, gtk-gui/gui.stetic,
	  SaveDocDialog.cs: Added basic handlers for events in SaveDocDialog.
	* OpenDocDialog.cs: Using Respond method to send result of the dialog.

2007-06-21  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Monodoc.Editor/EditorWindow.cs: Added handlers for Save and SaveAs
	  actions.
	* Monodoc.Editor/Monodoc.Editor.mdp,
	  Monodoc.Editor/gtk-gui/Monodoc.Editor.EditorWindow.cs,
	  Monodoc.Editor/gtk-gui/Monodoc.Editor.SaveDocDialog.cs,
	  Monodoc.Editor/gtk-gui/gui.stetic, Monodoc.Editor/SaveDocDialog.cs:
	  Added two new actions: Save and Save As. Added a new dialog for
	  Save As action.
	* Monodoc.Editor/OpenDocDialog.cs: Whitespace changes.
	
2007-06-20  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* gtk-gui/Monodoc.Editor.EditorWindow.cs, gtk-gui/gui.stetic: Made the
	  window appear in the center of the display and changed the wrap of